# repo_read_mcp

./: .gitignore  README.md  pyproject.toml  pytest.ini
repo_read_mcp/: __init__.py  mcp.py  models.py  repository.py  seagoat.py
repo_read_mcp/lib/: fastmcp_progress_keepalive.py
repo_read_mcp/templates/: Dockerfile.seagoat.base  run.base.sh
scripts/: mcp_server.py
src/repo_read_mcp/: config.py  mcp.py  seagoat.py
src/repo_read_mcp/lib/: utils.py
src/repo_read_mcp/scripts/: prepare.py
src/repo_read_mcp/templates/: Dockerfile.seagoat.base  __init__.py  run.base.sh
tests/: helpers.py  test_seagoat.py  test_semantic_search.py
tests/e2e/: test_mcp_tools.py
tests/repo_read_mcp/: test_seagoat.py
tests/repo_read_mcp/e2e/: test_mcp_tools.py
