[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-read-mcp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "JuHwiSang", email = "juhs2005@gmail.com" }]
dependencies = [
    "docker>=7.1.0",
    "fastmcp>=2.11.2",
]

[tool.setuptools.packages.find]
where = ["repo_read_mcp"]

[project.optional-dependencies]
tests = [
    "pytest>=8.4.1",
    "pygit2>=1.18.1",
]
