[project]
name = "repo-read-mcp"
version = "0.2.2"
description = ""
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "JuHwiSang", email = "juhs2005@gmail.com" }]
dependencies = [
    "docker>=7.1.0",
    "fastmcp>=2.11.2",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repo_read_mcp = [
    "templates/*",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.4.1",
    "pygit2>=1.18.1",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
repo_read_mcp = "repo_read_mcp.scripts.mcp_server:main"
repo_read_mcp_prepare = "repo_read_mcp.scripts.prepare:main"
